2006-06-16  Juraj Skripsky  <js@hotfeet.ch>

	* ecore.cs (SimpleName.Error_ObjectRefRequired): Do not truncate the name.
	Fixed bug #78601.
	(MemberExpr.EmitInstance): Use GetSignatureForError () to get full name.
	(FieldExpr.DoResolve): likewise.
	(PropertyExpr.InstanceResolve): likewise.
	(EventExpr.InstanceResolve): likewise. 

2006-06-15  Martin Baulig  <martin@ximian.com>

	* statement.cs
	(SwitchLabel.ResolveAndReduce): Added `bool allow_nullable'
	argument; always allow a `null' label if true.
	(Switch.SwitchGoverningType): Take an `Expression expr' argument.
	(Switch.TableSwitchEmit, Switch.SimpleSwitchEmit): Check whether
	we have a `null' label and mark the new `null_target' label;
	default to the `default' label.
	(Switch.Resolve): Add support for nullable types.  Fixes #78630.

2006-06-15  Martin Baulig  <martin@ximian.com>

	* class.cs (Operator.Define): Allow an implicit/explicit operator
	to convert to/from a nullable value of the enclosing type.

	* generic.cs (TypeManager.IsNullableTypeOf): New public method.
	(Nullable.Unwrap, Nullable.Wrap): Make these classes public.

	* convert.cs
	(Convert.ImplicitStandardConversionExists): Add support for lifted
	implicit/explicit conversions.
	(Convert.ImplicitConversionStandard): Likewise.

2006-06-13  Martin Baulig  <martin@ximian.com>

	* ecore.cs (SimpleName.DoSimpleNameResolve): Check whether we have
	type arguments and create a ConstructedType if necessary.  Fixes #78400.

2006-06-04  Marek Safar  <marek.safar@seznam.cz>

	* parameter.cs (Parameter.ApplyAttributeBuilder): More DefaultValue
	attribute applicable tests for attribute argument.

2006-06-02  Raja R Harinath  <rharinath@novell.com>

	Fix #78079
	* expression.cs (Binary.DoNumericPromotions): Remove and rewrite.
	(Binary.OverloadResolve_PredefinedIntegral): New.
	(Binary.OverloadResolve_PredefinedFloating): New.
	(Binary.OverloadResolve_PredefinedString): New.
	(Binary.ResolveOperator): Use those instead of DoNumericPromotions.