@@ -1,3 +1,9 @@
+2006-06-16  Martin Baulig  <martin@ximian.com>
+
+	* generic.cs
+	(Constraints.InflatedConstraints.inflate): Correctly inflate
+	generic types; fixes #78400.
+
 2006-06-16  Juraj Skripsky  <js@hotfeet.ch>
 
 	* ecore.cs (SimpleName.Error_ObjectRefRequired): Do not truncate the name.
